<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.netodologia.myapplication.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_notes"
        android:orderInCategory="100"
        android:title="@string/contacts"
        app:showAsAction="never" />

    <item
        android:id="@+id/calendar_open"
        android:orderInCategory="100"
        android:title="@string/calendar"
        app:showAsAction="never" />

    <item
        android:id="@+id/adress_open"
        android:orderInCategory="100"
        android:title="@string/Adress"
        app:showAsAction="never" />

    <item
        android:id="@+id/pay_open"
        android:orderInCategory="100"
        android:title="@string/Pay"
        app:showAsAction="never" />
</menu>